--- a/Counter-React/index.html
+++ b/Counter-React/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/gpts1s7zGhRz97APZ45qoEUNC-9cOFdm7Zrz8UGwrlIfIOVmj9OFdPtCIgJlu-kCVA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter App</title>
   </head>
